[tool.poetry]
name = "new_proj_poetry"
version = "0.1.0"
description = "My description"
authors = ["y"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
py = "^1.11.0"
game = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
